(feat) add websocket url
